objects/smlfcom__SML_Opportunity_Change__c.object
<CustomObject>
    <fields>
        <fullName>smlfcom__ActivityCountDetails__c</fullName>
        <label>ActivityCountDetails</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__ActivityCount__c</fullName>
        <label>ActivityCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__AmountChangeActual__c</fullName>
        <label>AmountChangeActual</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__AmountChangePercent__c</fullName>
        <label>AmountChangePercent</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__CloseDateChange__c</fullName>
        <label>CloseDateChange</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__CloseDateQuarterChange__c</fullName>
        <label>CloseDateQuarterChange</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__CloseThisQuarterProbability__c</fullName>
        <label>CloseThisQuarterProbability</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__CurrentAmount__c</fullName>
        <label>CurrentAmount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>smlfcom__CurrentCloseDate__c</fullName>
        <label>CurrentCloseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>smlfcom__DaysInCurrentStage__c</fullName>
        <label>DaysInCurrentStage</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__DaysSinceLastActivity__c</fullName>
        <label>DaysSinceLastActivity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__EarliestCloseDate__c</fullName>
        <label>EarliestCloseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>smlfcom__Ending_Bucket__c</fullName>
        <label>Ending Bucket</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__ForecastCategoryRepeat__c</fullName>
        <label>ForecastCategoryRepeat</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__From__c</fullName>
        <label>From</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__HighestAmount__c</fullName>
        <label>HighestAmount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>smlfcom__Is_Test_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Test Record?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__LatestActivityEmotionDetails__c</fullName>
        <label>LatestActivityEmotionDetails</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__LatestActivityEmotion__c</fullName>
        <label>LatestActivityEmotion</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__LatestCloseDate__c</fullName>
        <label>LatestCloseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>smlfcom__LowestAmount__c</fullName>
        <label>LowestAmount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>smlfcom__Matched_Rule_Details__c</fullName>
        <label>Matched Rule Details</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__Matched_Rule_Id1__c</fullName>
        <label>Matched Rule Id</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__Matched_Rule_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Matched Rule Id</label>
        <referenceTo>smlfcom__SML_Store__c</referenceTo>
        <relationshipLabel>SML Opportunity Changes</relationshipLabel>
        <relationshipName>SML_Opportunity_Changes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>smlfcom__Matched_Rules__c</fullName>
        <label>Matched Rules</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__NegativeReason__c</fullName>
        <label>NegativeReason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Notified_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notified Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__Notified_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notfied Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__Notified_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notified User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__Notified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>smlfcom__NumAmtDecreases__c</fullName>
        <label>NumAmtDecreases</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__NumAmtIncreases__c</fullName>
        <label>NumAmtIncreases</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__NumCloseDtDecreases__c</fullName>
        <label>NumCloseDtDecreases</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__NumCloseDtIncreases__c</fullName>
        <label>NumCloseDtIncreases</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__NumTimesFCRepeated__c</fullName>
        <label>NumTimesFCRepeated</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__NumTimesStageRepeated__c</fullName>
        <label>NumTimesStageRepeated</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>SML Opportunity Changes</relationshipLabel>
        <relationshipName>SML_Opportunity_Changes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>smlfcom__Period__c</fullName>
        <label>Period</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__PositiveReason__c</fullName>
        <label>PositiveReason</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Previous_Amount__c</fullName>
        <label>Previous Amount</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Previous_Close_Date__c</fullName>
        <label>Previous Close Date</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Previous_Forecast_Category__c</fullName>
        <label>Previous Forecast Category</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Previous_Stage__c</fullName>
        <label>Previous Stage</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Published_Date__c</fullName>
        <label>Published Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>smlfcom__Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__RepeatedForecastCat__c</fullName>
        <label>RepeatedForecastCat</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__RepeatedStageName__c</fullName>
        <label>RepeatedStageName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Rule_Action__c</fullName>
        <label>Rule Action</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Rule_Desc__c</fullName>
        <label>Rule Desc</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__Rule_Id__c</fullName>
        <label>Rule Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Rule__c</fullName>
        <label>Rule</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>smlfcom__Snapshot_Date_Type__c</fullName>
        <label>Snapshot Date Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Start_Date_Filter__c</fullName>
        <label>Start Date Filter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>Qrtr</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>smlfcom__TimePeriod__c</fullName>
        <label>TimePeriod</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Title__c</fullName>
        <label>Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__To__c</fullName>
        <label>To</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Type__c</fullName>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__URL__c</fullName>
        <label>URL</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__Value__c</fullName>
        <label>Value</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>smlfcom__Variable__c</fullName>
        <label>Variable</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>smlfcom__View_Type__c</fullName>
        <label>View Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Change</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
                <value>
                    <fullName>Waterfall</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
                <value>
                    <fullName>Matched_Rules</fullName>
                </value>
                <value>
                    <fullName>Forecast</fullName>
                </value>
                <value>
                    <fullName>Rule</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>smlfcom__Win_Score__c</fullName>
        <label>Win Score</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Number</type>
    </fields>
    <label>SML Opportunity Change</label>
    <listViews>
        <fullName>smlfcom__All_Forecasts_Rules</fullName>
        <columns>NAME</columns>
        <columns>smlfcom__View_Type__c</columns>
        <columns>smlfcom__Previous_Amount__c</columns>
        <columns>smlfcom__Win_Score__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>smlfcom__View_Type__c</field>
            <operation>equals</operation>
            <value>Change</value>
        </filters>
        <label>All Forecasts/Rules</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>smlfcom__Test_Record_Pipeline</fullName>
        <columns>NAME</columns>
        <columns>smlfcom__Previous_Forecast_Category__c</columns>
        <columns>smlfcom__Ending_Bucket__c</columns>
        <columns>smlfcom__Snapshot_Date_Type__c</columns>
        <columns>smlfcom__View_Type__c</columns>
        <columns>smlfcom__Is_Test_Record__c</columns>
        <filterScope>Everything</filterScope>
        <label>Test Record | Pipeline</label>
    </listViews>
    <nameField>
        <displayFormat>SML-OC-{0}</displayFormat>
        <label>SML Opportunity Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SML Opportunity Changes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>